New nav-bar, unsure about my boxes

--- a/code/index.html
+++ b/code/index.html
@@ -1,90 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <!-- dont forget the meta tag for responsiveness -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project 2: The News Site</title>
-  <link rel="stylesheet" href="./style.css" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Project 2: The News Site</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
-<body>
-    <!-- <header> -->
+  <body>
+    <nav>
+      <h2>Hot <span>news</span></h2>
       <!-- Some kind of logo and navbar -->
-    <!--
+      <ul>
+        <li><a href="https://www.google.com/">Home</a></li>
+        <li><a href="https://www.google.com/">About</a></li>
+        <li><a href="https://www.google.com/">Service</a></li>
+        <li><a href="https://www.google.com/">Portfolio</a></li>
+        <li><a href="https://www.google.com/">Contact us</a></li>
+      </ul>
+      <button type="button">Subscribe</button>
+    </nav>
 
-      <div class="navbar">
-        <img src="logo.JPG" alt="newspapers-logo">
-    <ul>
-        <li><a href="default.asp">Home</a></li>
-        <li><a href="news.asp">News</a></li>
-        <li><a href="contact.asp">Contact</a></li>
-        <li><a href="about.asp">About</a></li>
-    </ul>
-    </div>
-    </header> -->
+    <!-- <section class="big-news">
+      <h1>This is the biggest and hottest news for you!</h1>
+      The big news content
+    </section> -->
 
-    <!-- <h1>Hello world!</h1> -->
-
-    <section class="big-news">
-      <!-- The big news content -->
+    <section class="grey-box">
+      <!-- The other news  -->
+      <h2>Trending gossips 🔥</h2>
+      <p>Hello everybody! Welcome to these exciting news!</p>
+      <img src="129.jpg" alt="a picture of a dog" />
     </section>
 
     <section class="grey-box">
       <!-- The other news  -->
       <h2>Trending gossips 🔥</h2>
       <p>Hello everybody! Welcome to these exciting news!</p>
-      <img src="129.jpg" alt="a picture of a dog"/>
-    </section>
-    
-    <section class="grey-box">
-      <!-- The other news  -->
-      <h2>Trending gossips 🔥</h2>
-      <p>Hello everybody! Welcome to these exciting news!</p>
-      <img src="129.jpg" alt="a picture of a dog"/>
+      <img src="129.jpg" alt="a picture of a dog" />
     </section>
 
     <section class="grey-box">
       <!-- The other news  -->
       <h2>Trending gossips 🔥</h2>
       <p>Hello everybody! Welcome to these exciting news!</p>
-      <img src="129.jpg" alt="a picture of a dog"/>
+      <img src="129.jpg" alt="a picture of a dog" />
     </section>
 
     <section class="grey-box">
       <!-- The other news  -->
       <h2>Trending gossips 🔥</h2>
       <p>Hello everybody! Welcome to these exciting news!</p>
-      <img src="129.jpg" alt="a picture of a dog"/>
+      <img src="129.jpg" alt="a picture of a dog" />
     </section>
 
     <section class="grey-box">
       <!-- The other news  -->
       <h2>Trending gossips 🔥</h2>
       <p>Hello everybody! Welcome to these exciting news!</p>
-      <img src="129.jpg" alt="a picture of a dog"/>
+      <img src="129.jpg" alt="a picture of a dog" />
     </section>
 
     <section class="grey-box">
       <!-- The other news  -->
       <h2>Trending gossips 🔥</h2>
       <p>Hello everybody! Welcome to these exciting news!</p>
-      <img src="129.jpg" alt="a picture of a dog"/>
+      <img src="129.jpg" alt="a picture of a dog" />
     </section>
 
     <section class="grey-box">
       <!-- The other news  -->
       <h2>Trending gossips 🔥</h2>
       <p>Hello everybody! Welcome to these exciting news!</p>
-      <img src="129.jpg" alt="a picture of a dog"/>
+      <img src="129.jpg" alt="a picture of a dog" />
     </section>
 
     <section class="grey-box">
       <!-- The other news  -->
       <h2>Trending gossips 🔥</h2>
       <p>Hello everybody! Welcome to these exciting news!</p>
-      <img src="129.jpg" alt="a picture of a dog"/>
+      <img src="129.jpg" alt="a picture of a dog" />
     </section>
-</body>
-
+  </body>
+</html>
