Completed HTML and started basic CSS. git push

--- a/code/index.html
+++ b/code/index.html
@@ -8,68 +8,89 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Oswald|Noto+Sans"
-    />
-    <header>
-      <link
-        href="https://fonts.googleapis.com/css2?family=Megrim&family=Monoton&family=Raleway:wght@100&display=swap"
-        rel="stylesheet"
-      />
-      <div class="top-heading">
-        <img src="./images/paper-plane.png" alt="logo" />
-        <h1>Greece</h1>
-        <h2>Home</h2>
-        <h2>Info</h2>
-        <h2>Contact</h2>
-      </div>
-    </header>
-    <section class="big-news">
-      <!-- The big news  -->
-    </section>
-    <section class="island-info">
-      <div class="islands santorini">
-        <img src="./images/Santorini.jpg" alt="Santorini" />
-        <h3>Santorini</h3>
-        <p>
-          Santorini är en grekisk ögrupp i Egeiska havet, som utgör den södra
-          delen av ögruppen och prefekturen Kykladerna, cirka 18 km söder om Ios
-          och 110 km norr om Kreta. Öarnas yta är cirka 72 km² och, befolkningen
-          uppgick till ungefär 13 600 personer år 2001. Santorini är ett av
-          Greklands främsta turistmål.
+    <nav class="nav-bar">
+      <h1>Greece</h1>
+      <ul class="nav-links">
+        <li class="nav-item"><a href="#featured">Featured</a></li>
+        <li class="nav-item"><a href="#islands">Islands</a></li>
+        <li class="nav-item"><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+    <section id="featured" class="grid">
+      <div class="featured-text">
+        <h2>Featured Item</h2>
+        <img src="assets/images/hold.jpg" alt="Milos img" />
+        <h3 class="titles">Milos</h3>
+        <p class="leading">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo
+          consequat.
         </p>
-      </div>
-      <div class="islands mykonos">
-        <img src="./images/Mykonos.jpg" alt="Mykonos" />
-        <p>
-          Santorini är en grekisk ögrupp i Egeiska havet, som utgör den södra
-          delen av ögruppen och prefekturen Kykladerna, cirka 18 km söder om Ios
-          och 110 km norr om Kreta. Öarnas yta är cirka 72 km² och, befolkningen
-          uppgick till ungefär 13 600 personer år 2001. Santorini är ett av
-          Greklands främsta turistmål.
-        </p>
-      </div>
-      <div class="islands zakynthos">
-        <img src="./images/Zakynthos.jpg" alt="Zakynthos" />
-        <p>
-          Santorini är en grekisk ögrupp i Egeiska havet, som utgör den södra
-          delen av ögruppen och prefekturen Kykladerna, cirka 18 km söder om Ios
-          och 110 km norr om Kreta. Öarnas yta är cirka 72 km² och, befolkningen
-          uppgick till ungefär 13 600 personer år 2001. Santorini är ett av
-          Greklands främsta turistmål.
-        </p>
-      </div>
-      <div class="islands naxos">
-        <img src="./images/Naxos.jpg" alt="Naxos" />
-        <p>
-          Santorini är en grekisk ögrupp i Egeiska havet, som utgör den södra
-          delen av ögruppen och prefekturen Kykladerna, cirka 18 km söder om Ios
-          och 110 km norr om Kreta. Öarnas yta är cirka 72 km² och, befolkningen
-          uppgick till ungefär 13 600 personer år 2001. Santorini är ett av
-          Greklands främsta turistmål.
-        </p>
+        <a href="#" class="button">Read More</a>
       </div>
     </section>
+    <section id="#islands">
+      <h2>Islands</h2>
+      <div class="islands grid">
+        <a href="#"
+          ><img src="assets/images/hold.jpg" alt="crete img" />
+          <h3>Crete</h3>
+          <p class="leading">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo
+            consequat.
+          </p>
+        </a>
+        <a href="#"
+          ><img src="assets/images/hold.jpg" alt="crete img" />
+          <h3>Crete</h3>
+          <p class="leading">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo
+            consequat.
+          </p>
+        </a>
+        <a href="#"
+          ><img src="assets/images/hold.jpg" alt="crete img" />
+          <h3>Crete</h3>
+          <p class="leading">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo
+            consequat.
+          </p>
+        </a>
+        <a href="#"
+          ><img src="assets/images/hold.jpg" alt="crete img" />
+          <h3>Crete</h3>
+          <p class="leading">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo
+            consequat.
+          </p>
+        </a>
+        <a href="#"
+          ><img src="assets/images/hold.jpg" alt="crete img" />
+          <h3>Crete</h3>
+          <p class="leading">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo
+            consequat.
+          </p>
+        </a>
+      </div>
+    </section>
+    <footer>
+      <div class="grid">
+        <p class="copyright">Copyright 2022 Julia Östedt</p>
+        <ul class="social">
+          <li>
+            <a href="https://www.linkedin.com/in/juliaostedt/"
+              ><img src="assets/images/LI-In-Bug.png" alt="linkedin"
+            /></a>
+          </li>
+          <li>
+            <a href="https://github.com/juliaostedt"
+              ><img
+                src="assets/images/GitHub-Mark-Light-120px-plus.png"
+                alt="github"
+            /></a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
