added images, boxes, links, layout for mobile.

--- a/code/index.html
+++ b/code/index.html
@@ -5,19 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <div class="logo">
+        <h2>SITE NAME</h2>
+      </div> 
+      <div class="navbar">
+        <ul>
+          <li><a href="default.asp">Home</a></li>
+          <li><a href="news.asp">News</a></li>
+          <li><a href="contact.asp">Contact</a></li>
+          <li><a href="about.asp">About</a></li>
+        </ul>
+      </div>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    <section class="news-items">
+      <div class="news-item big-news">
+        <img src="sports.jpg" alt="">
+        <h1>BIG NEWS ITEM</h1> 
+        <p>Lorem ipsum dolor sit amet. Sed consequuntur omnis est distinctio cupiditate ut soluta consequuntur ut nihil voluptate sit fuga sint rem unde reprehenderit? Ut soluta culpa ut expedita accusantium ex excepturi eveniet ad nihil maiores. </p>
+      </div>
 
-    <section class="">
-      <!-- The other news  -->
+      <div class="news-item other-news">
+        <img src="airport.jpg" alt="">
+        <h1>airport news here</h1> 
+        <p>more info about the other news here</p>
+      </div>
+      <div class="news-item other-news">
+        <img src="healthcare.jpg" alt="">
+        <h1>other news here</h1> 
+        <p>more info about the other news here</p>
+      </div>
+      <div class="news-item other-news">
+        <img src="war.jpg" alt="">
+        <h1>other news here</h1> 
+        <p>more info about the other news here</p>
+      </div>
+      <div class="news-item other-news">
+        <img src="peru.jpg" alt="">
+        <h1>other news here</h1> 
+        <p>more info about the other news here</p>
+      </div>
+      <div class="news-item other-news">
+        <img src="finance.jpg" alt="">
+        <h1>other news here</h1> 
+        <p>more info about the other news here</p>
+      </div>
+      <div class="news-item other-news">
+        <img src="airplanes.jpg" alt="">
+        <h1>other news here</h1> 
+        <p>more info about the other news here</p>
+      </div>
+      <div class="news-item other-news">
+        <img src="family.jpg" alt="">
+        <h1>other news here</h1> 
+        <p>more info about the other news here</p>
+      </div>
     </section>
   </body>
 </html>
