added some divs and changed the direction of the text to columns

--- a/code/index.html
+++ b/code/index.html
@@ -30,38 +30,54 @@
 
       <div class="news-item other-news">
         <img src="airport.jpg" alt="">
-        <h1>airport news here</h1> 
-        <p>more info about the other news here</p>
+        <div class="text-box">
+          <h1>other news here</h1> 
+          <p>more info about the other news here</p>
+        </div>
+     
       </div>
       <div class="news-item other-news">
         <img src="healthcare.jpg" alt="">
-        <h1>other news here</h1> 
-        <p>more info about the other news here</p>
+        <div class="text-box">
+          <h1>other news here</h1> 
+          <p>more info about the other news here</p>
+        </div>
       </div>
       <div class="news-item other-news">
         <img src="war.jpg" alt="">
-        <h1>other news here</h1> 
-        <p>more info about the other news here</p>
+        <div class="text-box">
+          <h1>other news here</h1> 
+          <p>more info about the other news here</p>
+        </div>
       </div>
       <div class="news-item other-news">
         <img src="peru.jpg" alt="">
-        <h1>other news here</h1> 
-        <p>more info about the other news here</p>
+        <div class="text-box">
+          <h1>other news here</h1> 
+          <p>more info about the other news here</p>
+        </div>
       </div>
       <div class="news-item other-news">
         <img src="finance.jpg" alt="">
-        <h1>other news here</h1> 
-        <p>more info about the other news here</p>
+        <div class="text-box">
+          <h1>other news here</h1> 
+          <p>more info about the other news here</p>
+        </div>   
       </div>
       <div class="news-item other-news">
-        <img src="airplanes.jpg" alt="">
-        <h1>other news here</h1> 
-        <p>more info about the other news here</p>
+        <img src="airplanes.jpg" alt=""> 
+        <div class="text-box">
+          <h1>other news here</h1> 
+          <p>more info about the other news here</p>
+        </div>
+
       </div>
       <div class="news-item other-news">
         <img src="family.jpg" alt="">
-        <h1>other news here</h1> 
-        <p>more info about the other news here</p>
+        <div class="text-box">
+          <h1>other news here</h1> 
+          <p>more info about the other news here</p>
+        </div>
       </div>
     </section>
   </body>
