worked with links to other htmls

--- a/code/index.html
+++ b/code/index.html
@@ -9,20 +9,20 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300;400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&family=Mukta:wght@300;400;700&display=swap" rel="stylesheet">
-  <title>climbin magazine</title>
+  <title>climbing-magazine</title>
 </head>
 <body>
   <div class="wrapper">
     <header class="header">
       <div class="logo-container">
-        <img class="logo" src="./images-videos/logo.png" alt="logo">
+        <a href="index.html"><img class="logo" src="./images-videos/logo.png" alt="logo"></a>
           <h5 class="magazine-name">nine c plus</h5>
       </div>
       <ul class="menu">
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">Articles</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>            
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>            
       </ul>
     </header>
     <section class="slide-quotes">
@@ -126,7 +126,7 @@
           </div>
           <div class="flex-footer-child info2">
             <p1>First project: July 2022</p1>
-            <a href="mailto:dballesterfont@gmail.com"><p2>Send me an email</p2></a>
+            <a href="contact.html"><p2>Send an email</p2></a>
             <p3>Pictures and media: Mixkit and Pexels </p3>
           </div>
         </div>
