Structured the heading and links

--- a/code/index.html
+++ b/code/index.html
@@ -16,16 +16,17 @@
 
 <body>
 <header>
-    <img src="logo.png" alt="logo">
-   <h3>the Garden</h3>
-
-    <div class="links">
-        <a href="http://google.se">Greens</a>
-        <a href="http://google.se">Flowers</a>
-        <a href="http://google.se">Seeds</a>
-        <a href="http://google.se">Archive</a>
+    <div class="page-header">
+        <img src="logo.png" alt="logo">
+        <h3>the Garden</h3>
     </div>
-
+            <div class="links">
+                <a href="http://google.se">Greens</a>
+                <a href="http://google.se">Flowers</a>
+                <a href="http://google.se">Seeds</a>
+                <a href="http://google.se">Archive</a>
+            </div>
+    
 </header>
 <div class="content">
     <div class="presentation">
