changed font sizes and flex-direction

--- a/code/index.html
+++ b/code/index.html
@@ -9,14 +9,13 @@
   <body>
     <header>
       <div class="logo">
-        <h2>SITE NAME</h2>
+        <h1>SITE NAME</h1>
       </div> 
       <div class="navbar">
         <ul>
-          <li><a href="default.asp">Home</a></li>
-          <li><a href="news.asp">News</a></li>
-          <li><a href="contact.asp">Contact</a></li>
-          <li><a href="about.asp">About</a></li>
+          <li><a href="morenews.asp">more articles</a></li>
+          <li><a href="contact.asp">contact</a></li>
+          <li><a href="about.asp">bout</a></li>
         </ul>
       </div>
     </header>
@@ -24,14 +23,14 @@
     <section class="news-items">
       <div class="news-item big-news">
         <img src="sports.jpg" alt="">
-        <h1>BIG NEWS ITEM</h1> 
+        <h2>BIG NEWS ITEM</h2> 
         <p>Lorem ipsum dolor sit amet. Sed consequuntur omnis est distinctio cupiditate ut soluta consequuntur ut nihil voluptate sit fuga sint rem unde reprehenderit? Ut soluta culpa ut expedita accusantium ex excepturi eveniet ad nihil maiores. </p>
       </div>
 
       <div class="news-item other-news">
         <img src="airport.jpg" alt="">
         <div class="text-box">
-          <h1>other news here</h1> 
+          <h3>other news here</h3> 
           <p>more info about the other news here</p>
         </div>
      
@@ -39,35 +38,35 @@
       <div class="news-item other-news">
         <img src="healthcare.jpg" alt="">
         <div class="text-box">
-          <h1>other news here</h1> 
+          <h3>other news here</h3> 
           <p>more info about the other news here</p>
         </div>
       </div>
       <div class="news-item other-news">
         <img src="war.jpg" alt="">
         <div class="text-box">
-          <h1>other news here</h1> 
+          <h3>other news here</h3> 
           <p>more info about the other news here</p>
         </div>
       </div>
       <div class="news-item other-news">
         <img src="peru.jpg" alt="">
         <div class="text-box">
-          <h1>other news here</h1> 
+          <h3>other news here</h3> 
           <p>more info about the other news here</p>
         </div>
       </div>
       <div class="news-item other-news">
         <img src="finance.jpg" alt="">
         <div class="text-box">
-          <h1>other news here</h1> 
+          <h3>other news here</h3> 
           <p>more info about the other news here</p>
         </div>   
       </div>
       <div class="news-item other-news">
         <img src="airplanes.jpg" alt=""> 
         <div class="text-box">
-          <h1>other news here</h1> 
+          <h3>other news here</h3> 
           <p>more info about the other news here</p>
         </div>
 
@@ -75,7 +74,7 @@
       <div class="news-item other-news">
         <img src="family.jpg" alt="">
         <div class="text-box">
-          <h1>other news here</h1> 
+          <h3>other news here</h3> 
           <p>more info about the other news here</p>
         </div>
       </div>
