--- a/new code/index.html
+++ b/new code/index.html
@@ -12,28 +12,30 @@
 </html>
 
 <body>
-  <nav>
-    <h2>Juicy <span>knowledge</span></h2>
-    <!-- Some kind of logo and navbar -->
-    <div class="nav-links-desktop">
-      <ul>
-        <li><a href="https://www.google.com/">Home</a></li>
-        <li><a href="https://www.google.com/">About</a></li>
-        <li><a href="https://www.google.com/">Service</a></li>
-        <li><a href="https://www.google.com/">Portfolio</a></li>
-        <li><a href="https://www.google.com/">Contact us</a></li>
-      </ul>
-    </div>
-    <div class="dropdown-tablet-mobile">
-      <button class="dropbtn" onclick="myDropdown()"></button>
-      <div class="dropdown-content" id="dropdown-id">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+  <header>
+    <nav>
+      <h2>Juicy <span>knowledge</span></h2>
+      <!-- Some kind of logo and navbar -->
+      <div class="nav-links-desktop">
+        <ul>
+          <li><a href="https://www.google.com/">Home</a></li>
+          <li><a href="https://www.google.com/">About</a></li>
+          <li><a href="https://www.google.com/">Service</a></li>
+          <li><a href="https://www.google.com/">Portfolio</a></li>
+          <li><a href="https://www.google.com/">Contact us</a></li>
+        </ul>
       </div>
-    </div>
-    <button class="subscribe" type="button">Subscribe</button>
-  </nav>
+      <div class="dropdown-tablet-mobile">
+        <button class="dropbtn" onclick="myDropdown()"></button>
+        <div class="dropdown-content" id="dropdown-id">
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
+      </div>
+      <button class="subscribe" type="button">Subscribe</button>
+    </nav>
+  </header>
 
   <section class="grid-parent">
     <div class="grid-item big-grid-item">*</div>
