--- a/code/index.html
+++ b/code/index.html
@@ -7,30 +7,109 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <header class="site-header">
-      <div class="logo">
+    <header class="flex-container-site-header">
+      <div class="flex-item-header logo">
         <img src="Biker_Two Color.png" alt="Logo">
-        <h1>Just roll with it</h1>
+        <h1>Get up to speed</h1>
+        <h2>Your online bike magazine</h2>
       </div>
-      <div class="navbar">
+      <div class="flex-item-header navbar">
         <img class="nav-button" src="icons8-menu-24.png" alt="Navigate">
       </div>
     </header>
 
     <section class="big-news-grid">
-      <div class="big-news-item picture-big-news-item">
-        <img src="Tour de France.jpg" alt="Tour de France">
+      <div class="big-news-item picture-big-news-item"><img src="Tour de France.jpg" alt="Tour de France">
       </div>
       <div class="big-news-item h1-big-news-item">
         <h1>All about Denmark</h1>
       </div>
       <div class="big-news-item text-big-news-item">
-        <p>For the first time ever, Tour de France started in Denmark. <br> <a href=""> Read more</a></p>
+        <p>For the first time ever, Tour de France started in Denmark. <br> <button>Read more</button></p>
       </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="flex-parent-other-news">
+      <div class="flex-child-news 1">
+        <div class="flex-child-news-img">
+          <img src="östergötland.jpeg" alt="Fält i Östergötland. Foto: Jessika Lind">
+        </div>
+        <div class="flex-child-news-text">
+          <h1>Discover Östergötland on two wheels</h1>
+          <p>Follow the ever-golden fields and get lost in the beauty of Östergötland. <br>
+            <button>Read more</button></p>
+        </div>    
+      </div>
+      <div class="flex-child-news 2">
+        <div class="flex-child-news-img">
+          <img src="pexels-anastasia-shuraeva-8926958.jpg" alt="Biking in a forest. Photo: A Shuraeva">
+        </div>
+        <div class="flex-child-news-text">
+          <h1>Uphill does not have to be a battle</h1>
+          <p>Leo Hartland was 15 years old when he started riding Mountain bike. Today he does not let anything stop him. Read more. <br>
+            <button>Read more</button></p>
+        </div>   
+      </div>
+      <div class="flex-child-news 3">
+        <div class="flex-child-news-img">
+          <img src="Jess-pata-cykel.JPG" alt="Jessika and Patrick after a bike ride. Foto: Jessika Lind">
+        </div>
+        <div class="flex-child-news-text">
+          <h1>A fun couples activity? A <em>really</em> fun couples activity!</h1>
+          <p>Perhaps you might want to call it an age 30 crisis. Go ahead! Buying racer bikes and getting on the roads togheter was nevertheless a great idea for Jessika and Patrick. <br>
+            <button>Read more</button></p>
+        </div>   
+      </div>
+      <div class="flex-child-news 4">
+        <div class="flex-child-news-img">
+          <img src="pexels-rodnae-productions-10566475.jpg" alt="Young child on bike. Foto: RODNAE Productions">
+        </div>
+        <div class="flex-child-news-text">
+          <h1>Is there a <em>too young</em> when it comes to teaching your child to ride a bike?</h1>
+          <p>Not if you ask Kristina Petterson, doctor in child psycology. Find out everything about the toddler's brain and the child's relationship to the bike in this article. <br>
+            <button>Read more</button></p>
+        </div>   
+      </div>
+      <div class="flex-child-news 5">
+        <div class="flex-child-news-img">
+          <img src="pexels-lina-kivaka-1458742.jpg" alt="E-bikes in London. Foto: Lina Kivaka">
+        </div>
+        <div class="flex-child-news-text">
+          <h1>E-bike: friend or foe?</h1>
+          <p>From North to South, from East to West, you can see them popping up. On the one hand, the popularity of e-bikes open up the world of bikes to more people. On the other: it makes us lazy. <br>
+            <button>Read more</button></p>
+        </div>   
+      </div>
+      <div class="flex-child-news 6">
+        <div class="flex-child-news-img">
+          <img src="pexels-tima-miroshnichenko-5061121.jpg" alt="Man with a bike. Photo:Tima Miroshnichenko">
+        </div>
+        <div class="flex-child-news-text">
+          <h1>Guide: everything to consider when buying new wheels</h1>
+          <p>Is it time to freshen up your wheels? In our brand new guide you will find all the tips and tricks you need to find the best wheels for your beloved bike. <br>
+            <button>Read more</button></p>
+        </div>   
+      </div>
+      <div class="flex-child-news 7">
+        <div class="flex-child-news-img">
+          <img src="pexels-pavel-danilyuk-5807578.jpg" alt="Three friends riding. Photo: Pavel Danilyuk">
+        </div>
+        <div class="flex-child-news-text">
+          <h1>Three is a magic number</h1>
+          <p>Up until a few years back, Robin Rådgård, had no one to ride with. This all changed last summer when he found Peter and Nori through a social media network. Today the three friends bike every Sunday. <br>
+            <button>Read more</button></p>
+        </div>   
+      </div>
+      <div class="flex-child-news 8">
+        <div class="flex-child-news-img">
+          <img src="pexels-hessel-geriet-3315147.jpg" alt="Woman doing down-hill biking. Photo: Hessel Geriet">
+        </div>
+        <div class="flex-child-news-text">
+          <h1>"Everytime I get on the bike I need to remind myself to be brave"</h1>
+          <p>This mantra is central to Hanna Gabrielsson, since she is both afraid of heights and speed. A bit extra courage is therefore needed. <br>
+            <button>Read more</button></p>
+        </div>   
+      </div>
     </section>
   </body>
 </html>
