Adds hover effects

--- a/code/index.html
+++ b/code/index.html
@@ -36,7 +36,7 @@
               </a>
             </figure>
             <a class="big-news-link" href="https://www.goodnewsnetwork.org/large-doses-of-iron-could-be-used-to-kill-off-drug-resistant-prostate-cancer-cells-scientists-believe/">
-              <h1>The Cure for Prostate Cancer</h1>
+              <h1 class="big-news-header">The Cure for Prostate Cancer</h1>
               <p class="big-news-text">Large doses of iron could be used to kill off drug-resistant prostate cancer cells, scientists believe</p>
             </a>
           
