Moved subscribe for mob&padda

--- a/new code/index.html
+++ b/new code/index.html
@@ -28,9 +28,11 @@
       <div class="dropdown-tablet-mobile">
         <button class="dropbtn" onclick="myDropdown()"></button>
         <div class="dropdown-content" id="dropdown-id">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
+          <a href="https://www.google.com/">Home</a>
+          <a href="https://www.google.com/">About</a>
+          <a href="https://www.google.com/">Service</a
+          ><a href="https://www.google.com/">Portfolio</a
+          ><a href="https://www.google.com/">Contact</a>
         </div>
       </div>
       <button class="subscribe" type="button">Subscribe</button>
