more changes in html and css

--- a/code/index.html
+++ b/code/index.html
@@ -10,8 +10,10 @@
     <header class="flex-container-site-header">
       <div class="flex-item-header logo">
         <img src="Biker_Two Color.png" alt="Logo">
-        <h1>Get up to speed</h1>
-        <h2>Your online bike magazine</h2>
+        <div class ="flex-item-header headline">
+          <h1>Get up to speed</h1>
+          <h2>Your online bike magazine</h2>
+        </div>
       </div>
       <div class="flex-item-header navbar">
         <img class="nav-button" src="icons8-menu-24.png" alt="Navigate">
@@ -19,13 +21,14 @@
     </header>
 
     <section class="big-news-grid">
-      <div class="big-news-item picture-big-news-item"><img src="Tour de France.jpg" alt="Tour de France">
+      <div class="big-news-item picture-big-news-item">
+        <img src="Tour de France.jpg" alt="Tour de France">
       </div>
       <div class="big-news-item h1-big-news-item">
         <h1>All about Denmark</h1>
       </div>
       <div class="big-news-item text-big-news-item">
-        <p>For the first time ever, Tour de France started in Denmark. <br> <button>Read more</button></p>
+        <p>There is no doubt that 2022 is Denmark's year. Not only did the small Scandinavian country host the first stretch of Tour de France - the Danish rider Jonas Vingegaard also won the 109th edition of the Tour de France.<br> <button>Read more</button></p>
       </div>
     </section>
 
@@ -36,7 +39,7 @@
         </div>
         <div class="flex-child-news-text">
           <h1>Discover Östergötland on two wheels</h1>
-          <p>Follow the ever-golden fields and get lost in the beauty of Östergötland. <br>
+          <p>Planning on getting out of the city? Follow the ever-golden fields and get lost in the beauty of Östergötland. <br>
             <button>Read more</button></p>
         </div>    
       </div>
@@ -46,7 +49,7 @@
         </div>
         <div class="flex-child-news-text">
           <h1>Uphill does not have to be a battle</h1>
-          <p>Leo Hartland was 15 years old when he started riding Mountain bike. Today he does not let anything stop him. Read more. <br>
+          <p>After a gruesome downhill accident, Leo Hartland has changed direction. Today he prefers uphill challenges. <br>
             <button>Read more</button></p>
         </div>   
       </div>
