--- a/code/about.html
+++ b/code/about.html
@@ -28,11 +28,11 @@
 		<section class="grid-about">
 		<div class="container-about">
 			<div class="about-title">
-				<h2>A litle bit about us</h2>
+				<h2>A little bit about us</h2>
 			</div>
 			<div class="about-info">
 				<div class="about-info-child">
-					<img src="/code/images-videos/about-us.jpg" alt="this is us">
+					<img src="./code/images-videos/about-us.jpg" alt="this is us">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
 				</div>
 			</div>
